@@ -13,6 +13,8 @@ SYNOPSIS
 
 *upsdrvctl* ['OPTIONS'] {start | stop | shutdown} ['ups']
 
+*upsdrvctl* ['OPTIONS'] {list | -l} ['ups']
+
 *upsdrvctl* ['OPTIONS'] -c COMMAND ['ups']
 
 DESCRIPTION
@@ -81,6 +83,9 @@ this mode (not saved by default when staying in foreground).
 Drivers will run in the background, regardless of debugging settings,
 as set by *-D* and passed-through by *-d* options.
 
+*-l*::
+Alias for `list` command.
+
 COMMANDS
 --------
 
@@ -117,6 +122,18 @@ to lose power.
 NOTE: refer to linkman:ups.conf[5] for using the *nowait* parameter.
 It can be overridden by `NUT_IGNORE_NOWAIT` environment variable
 (e.g. used to work around certain issues with systemd otherwise).
+
+*list*::
+Without a further argument, report all currently known device configuration
+names to `stdout`, one per line. With an argument, also try to report that
+name, but exit with an error code if that name is not known.
+
+NOTE: The tool would exit with an error if `ups.conf` file is not found,
+readable, or does not define any device sections (whose names are reported
+here and managed in other commands).
+
+NOTE: The tool name and NUT version banner line is also printed to `stdout`
+before any other processing.
 
 *-c* 'command'::
 Send 'command' to the background process as a signal.  Valid commands
